@@ -258,6 +258,18 @@ CREATE TABLE history (
 ) type=InnoDB;
 
 --
+-- Table structure for table 'history_uint'
+--
+
+CREATE TABLE history_uint (
+  itemid		int(4)		DEFAULT '0' NOT NULL,
+  clock			int(4)		DEFAULT '0' NOT NULL,
+  value			bigint unsigned	DEFAULT '0' NOT NULL,
+--  PRIMARY KEY (itemid,clock)
+  KEY itemidclock (itemid, clock)
+) type=InnoDB;
+
+--
 -- Table structure for table 'history_str'
 --
 
