@@ -21,3 +21,14 @@ CREATE TABLE servers (
 ) type=InnoDB;
 insert into servers values(1,'DEFAULT','127.0.0.1',10051);
 
+--
+-- Table structure for table 'history_uint'
+--
+
+CREATE TABLE history_uint (
+  itemid		int(4)		DEFAULT '0' NOT NULL,
+  clock			int(4)		DEFAULT '0' NOT NULL,
+  value			bigint unsigned	DEFAULT '0' NOT NULL,
+--  PRIMARY KEY (itemid,clock)
+  KEY itemidclock (itemid, clock)
+) type=InnoDB;
